[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "share-analytics"
version = "0.1.0"
description = "A lightweight and extensible stock backtesting framework."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "akshare>=1.16.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools]
packages = ["share_analytics", "share_analytics.strategies"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]
